--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "@angular/platform-browser": "^8.0.0",
     "@angular/platform-browser-dynamic": "^8.0.0",
     "@angular/router": "^8.0.0",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.18.3",
-    "core-js": "^3.1.2",
+    "core-js": "^3.19.2",
     "express": "^4.16.3",
     "mongoose": "^5.1.2",
+    "mongoose-unique-validator": "^3.0.0",
     "multer": "^1.3.0",
+    "redis-server": "^1.2.2",
     "rxjs": "^6.0.0",
     "zone.js": "^0.9.1"
   },
