--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "body-parser": "^1.18.3",
     "core-js": "^3.19.2",
     "express": "^4.16.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.1.2",
     "mongoose-unique-validator": "^3.0.0",
     "multer": "^1.3.0",
