--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mongoose": "^5.1.2",
     "mongoose-unique-validator": "^3.0.0",
     "multer": "^1.3.0",
+    "nodemailer": "^6.7.2",
     "redis": "^4.0.0",
     "redis-server": "^1.2.2",
     "rxjs": "^6.0.0",
