--- a/package.json
+++ b/package.json
@@ -24,15 +24,18 @@
     "@angular/router": "^8.0.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.18.3",
-    "core-js": "^3.19.2",
+    "core-js": "^3.19.3",
     "express": "^4.16.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.1.2",
     "mongoose-unique-validator": "^3.0.0",
     "multer": "^1.3.0",
+    "ngx-socket-io": "^4.1.0",
     "nodemailer": "^6.7.2",
     "redis": "^4.0.0",
     "redis-server": "^1.2.2",
     "rxjs": "^6.0.0",
+    "socket.io": "^4.4.0",
     "zone.js": "^0.9.1"
   },
   "devDependencies": {
