--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "^8.0.0",
     "@angular/router": "^8.0.0",
     "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "core-js": "^3.19.3",
     "express": "^4.16.3",
@@ -34,6 +35,7 @@
     "nodemailer": "^6.7.2",
     "redis": "^4.0.0",
     "redis-server": "^1.2.2",
+    "registry": "^0.3.0",
     "rxjs": "^6.0.0",
     "socket.io": "^4.4.0",
     "zone.js": "^0.9.1"
